--- a/package.json
+++ b/package.json
@@ -23,9 +23,8 @@
   "devDependencies": {
     "@cosmjs/stargate": "^0.28.9",
     "@subql/cli": "latest",
-    "typescript": "^4.7.4"
-  },
-  "dependencies": {
+    "@subql/types-core": "latest",
+    "typescript": "^4.7.4",
     "@ethersproject/bytes": "^5.6.1",
     "@subql/types-cosmos": "latest",
     "@types/node": "^17.0.21",
